# chaos-webgui

./: .gitignore  .gitlab-ci.yml  relaunch.sh
CUcgi/: CMakeLists.txt  Makefile  install_manifest.txt  main.cpp
CUcgi/nbproject/: configurations.xml  project.xml
CUcgi/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
CUiserver/: .cproject  .project  CMakeLists.txt
CUiserver/nbproject/: configurations.xml  project.xml
CUiserver/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
CUiserver/src/: ChaosController.cpp  ChaosController.h  ChaosWebController.cpp  ChaosWebController.h  MongooseEvent.cpp  MongooseEvent.h  MongooseServer.cpp  MongooseServer.h  MongooseWorker.cpp  MongooseWorker.h  dev_status.h  main.cpp
ChaosWANProxy/: CMakeLists.txt  CTestTestfile.cmake  ChaosWANProxy.cpp  ChaosWANProxy.h  WANProxyRegister.cpp  WANProxyRegister.h  webui.files  webui.includes
ChaosWANProxy/api/: AbstractApiGroup.cpp  AbstractApiGroup.h
ChaosWANProxy/api/grafana/: GrafanaQuery.cpp
ChaosWANProxy/api/producer/: ProducerInsertDatasetApi.cpp  ProducerInsertJsonApi.cpp  ProducerRegisterDatasetApi.cpp  ProducerRegisterJsonApi.cpp
ChaosWANProxy/persistence/: AbstractPersistenceDriver.cpp  AbstractPersistenceDriver.h  DefaultPersistenceDriver.cpp  DefaultPersistenceDriver.h
ChaosWANProxy/wan_interface/: AbstractWANInterface.cpp  AbstractWANInterface.h  BaseWANInterfaceHandler.cpp  BaseWANInterfaceHandler.h
ChaosWANProxy/wan_interface/http/: HTTPServedBoostInterface.cpp  HTTPServedBoostInterface.h  HTTPUIInterface.cpp  HTTPUIInterface.h  HTTPWANInterface.cpp  HTTPWANInterface.h  mongoose.cpp
w3chaos/: .project
w3chaos/nbproject/: project.properties  project.xml
w3chaos/public_html/: .htaccess  Aula_T.php  Aula_T_2.php  Aula_T_due.php  Aula_T_menu.php  Aula_T_px.php  Aula_T_zoom.php  BTF.html  BTF_DAQ.php  BTF_DAQ_graph.php  BTF_DAQ_hist.php  BTF_pw.php  BTF_pw_sim.html  BTF_pw_sim.php  Ed36.html  acci.html  accumulator_tot.php  ammeter_mod.html  ammeter_multi.html  ammeter_multi2.html  ammeter_multi3.html  ammeter_multix.html  ammeter_vai.html  ammeter_vai2.html  angu_eli.html  angular.html  beam_position_monitoring.php  beam_position_monitoring_command.php  beam_position_monitoring_command_total.php  beam_position_prova.html  chaos_cu_post.html  chaos_mds_post.html  cumonitor.html  deploy.sh  femto.html  histogram2.html  histogram_prova.html  index2ok.html  libera.html  libera_web.html  (+10 more)
w3chaos/public_html/accumulator/: index.html
w3chaos/public_html/accumulator/css/: custom_materialize.css  materialize.css
w3chaos/public_html/accumulator/js/: accumulator.js  chartDD.js  chartDDpermanent.js  chartSA-check.js  chartSA.js  commandPlot.js  plot_tot_DD.js  plot_tot_DD2.js  plot_tot_SA.js
w3chaos/public_html/accumulatorOrbit/: index.php
w3chaos/public_html/accumulatorOrbit/css/: materialize.css  style.css
w3chaos/public_html/accumulatorOrbit/js/: accumulator.js  chartDD-check.js  chartDD.js  chartDDpermanent.js  chartSA-check.js  chartSA.js  plot_tot_DD.js  plot_tot_SA.js  plot_tot_SA2.js
w3chaos/public_html/btf_dashboard/: index.html  restore.html  scrapers.html  table.html
w3chaos/public_html/btf_dashboard/css/: custom_style.css
w3chaos/public_html/btf_dashboard/js/: global-restore.js  scrapers-alarm-load.js  scrapers.js
w3chaos/public_html/cgi-bin/: cu.cgi
w3chaos/public_html/chaos_dashboard/: .htaccess  .project  agent-association.json  algo-port.json  algo.json  archive.php  chaos_jshell.php  chaos_node.php  configuration.php  cu-attribute.json  cu-driver.json  cu.json  eu.php  graph.php  head.php  header.php  index.html  index.php  live-data.php  magnets.html  menu.php  orbit.php  process.php  scrapers.html
w3chaos/public_html/chaos_dashboard/CUgenerator/: Generate.js  controlUnit.js  main.js
w3chaos/public_html/chaos_dashboard/css/: custom_style.css  style.css
w3chaos/public_html/chaos_dashboard/cu_templates/: cu_templates.json
w3chaos/public_html/chaos_dashboard/js/: archive.js  jchaos.js  magnets.js  monitoring-alarm.js  monitoring-cmd.js  monitoring.js  monitoring2.js  plot-archive.js  plot-live.js
w3chaos/public_html/cmt/: index.html  sequencer.html
w3chaos/public_html/cmt/css/: custom_materialize.css  sequencer.css  style.css
w3chaos/public_html/cmt/js/: mag_chaos.js  mag_export.js  mag_load_chaos.js  mag_load_set_polarity.js  mag_total_load_chaos.js  mag_web.js  sequencer.js
w3chaos/public_html/css/: Aula_T_graph2.css  Aula_T_graph_menu.css  Aula_T_px.css  Aula_T_zoom.css  BTF.css  BTF_DAQ.css  BTF_DAQ_hist.css  BTF_pw.css  Ed36.css  accumulator_tot.css  beam_position_monitoring.css  beam_position_monitoring_command.css  beam_position_monitoring_command_total.css  libera02.css  mag_terminal.css  reset.css
w3chaos/public_html/cumonitor/: .project  index.html
w3chaos/public_html/cumonitor/js/: jchaos.js
w3chaos/public_html/dafne_dashboard/: a.html  dafne_archive.html  dafne_live.html  dafne_live_choose.html  index.html  luminometer.html  magnets.html  scrapers.html
w3chaos/public_html/data/: po.json  powerSupplyTest.json  temps-data.json  temps-data_eli.json  temps-def.json  temps-def_eli.json
w3chaos/public_html/menu/: Aula_T_menu.css
w3chaos/public_html/scripts/: jsonReader.js  jsonReader_eli.js  jsonReader_io.js
w3chaos/public_html/webChaos/: Aula_T.js  Aula_T_ok.js  Aula_T_proo.js  Aula_T_real.js  Aula_T_real_zoom.js  BPM.js  BPM_command_plot.js  BPM_tot_line.js  BPM_tot_point.js  DAQ.js  DAQ_graph.js  DAQ_hist.js  ammeter_multix.js  ammeter_style.css  ammeter_vai.css  chaos.css  chaos.js  chaos_explain.js  jchaos.js  libera.js  libera02.js  libera_prova.js  libera_state.js  libera_state_due.js  libera_state_total.js  mag_terminal.js  multix.css  powersupply.js  powersupply_state.js  prova.css  provastile3.css  webchaos.css
(+31 files in other folders)
